[package]
name = "json-patch"
version = "0.2.7-alpha.0"
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = []
keywords = ["json", "json-patch"]
description = "RFC 6902, JavaScript Object Notation (JSON) Patch"
repository = "https://github.com/idubrov/json-patch"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[features]
default = ["diff"]
nightly = []
diff = ["treediff"]

[dependencies]
json-ptr = { path = "../json-ptr" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"

[dependencies.treediff]
version = "4.0.0"
features = ["with-serde-json"]
optional = true

[dev-dependencies]
rand = "0.7.3"
serde_json = { version = "1.0.60", features = ["preserve_order"] }
